--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -9,4 +9,10 @@ jobs:
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
+        SLACK_MSG_AUTHOR: vng-vivid
+        SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+        SLACK_ICON: https://github.com/vng-vivid.png?size=48
+        SLACK_MESSAGE: ':rocket: new release'
+        SLACK_TITLE: Checkout [changelog](https://github.com/Vonage/vivid/blob/master/CHANGELOG.md)
+        SLACK_USERNAME: Vivid
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
