--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -13,7 +13,8 @@ jobs:
         SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
         SLACK_ICON: https://github.com/vng-vivid.png?size=48
         SLACK_MESSAGE: ':rocket: new release'
-        SLACK_TITLE: Checkout [changelog](https://github.com/Vonage/vivid/blob/master/CHANGELOG.md)
+        SLACK_TITLE: <https://example.com|Overlook Hotel> Checkout [changelog](https://github.com/Vonage/vivid/blob/master/CHANGELOG.md)
         SLACK_USERNAME: Vivid
+        SLACK_FOOTER: ''
         MSG_MINIMAL: true
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
