--- a/components/icon/package.json
+++ b/components/icon/package.json
@@ -27,15 +27,10 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-base": "^0.22.1",
-		"@vonage/vvd-core": "2.27.0",
-		"@vonage/vvd-foundation": "2.27.0",
-		"lit-element": "^2.4.0",
-		"lit-html": "^1.3.0",
-		"ramda": "^0.27.1"
+		"@vonage/vivid": "^3.0.0-next.3",
+		"@vonage/vvd-core": "2.27.0"
 	},
 	"devDependencies": {
-		"@types/ramda": "^0.27.36",
 		"@vonage/vvd-umbrella": "2.27.0",
 		"tslib": "^2.3.0"
 	}
