--- a/components/action-group/package.json
+++ b/components/action-group/package.json
@@ -28,8 +28,10 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-core": "2.30.3",
-		"@vonage/vwc-expansion-panel": "2.30.3",
+		"@vonage/vvd-foundation": "2.30.3",
+		"@vonage/vvd-style-coupling": "2.30.3",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
