--- a/components/action-group/package.json
+++ b/components/action-group/package.json
@@ -27,16 +27,16 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "2.30.3",
-		"@vonage/vvd-foundation": "2.30.3",
-		"@vonage/vvd-style-coupling": "2.30.3",
+		"@vonage/vvd-core": "2.31.0",
+		"@vonage/vvd-foundation": "2.31.0",
 		"lit-element": "^2.4.0",
-		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "2.30.3",
-		"@vonage/vvd-umbrella": "2.30.3",
+		"@vonage/vvd-design-tokens": "2.31.0",
+		"@vonage/vvd-typography": "2.31.0",
+		"@vonage/vvd-umbrella": "2.31.0",
+		"lit-html": "^1.3.0",
 		"typescript": "^4.3.2"
 	}
 }
