--- a/.github/workflows/deploy-showcase-pr-s3.yml
+++ b/.github/workflows/deploy-showcase-pr-s3.yml
@@ -11,7 +11,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PRS_ACCESS }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PRS_SECRET }}
       AWS_DEFAULT_REGION: us-east-1
-      AWS_DEFAULT_OUTPUT: json
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
@@ -57,7 +56,7 @@ jobs:
         run: yarn storybook:build base-url=${{ github.event.number }}
 
       - name: Deploy showcase under PR ID (${{ github.event.number }})
-        run: aws s3 sync ./.out/ s3://${{ secrets.secrets.AWS_VIVID_DEMO_PRS_BUCKET }}/${{ github.event.number }}
+        run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PRS_BUCKET }}/${{ github.event.number }}
 
       - name: Invalidate CloudFront distribution root object's cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PRS_DISTRIBUTION }} --paths "/${{ github.event.number }}/*"
