--- a/.github/workflows/remove-showcase-pr-s3.yml
+++ b/.github/workflows/remove-showcase-pr-s3.yml
@@ -10,6 +10,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PRS_ACCESS }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PRS_SECRET }}
+      AWS_DEFAULT_REGION: us-east-1
 
     steps:
       - name: Cleanup showcase under PR ID (${{ github.event.number }})
