--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,6 +78,7 @@ jobs:
         run: npm publish $(node ./scripts/vivid-all-package-generator)
 
   deploy_storybook:
+    if: always()
     name: Deploy "vivid.vonage.com" (Storybook)
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
