--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build:
-    if: inputs.only_deploy != 'yes'
+    if: always()
     runs-on: ubuntu-18.04
     env:
       GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
