--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
-		"playwright": "^1.12.2",
+		"playwright": "latest",
 		"prism": "^4.1.2",
 		"remove-dir-safe": "^2.0.0",
 		"semver-compare": "^1.0.0",
