--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
+		"playwright": "1.32.3",
 		"prism": "^4.1.2",
 		"remove-dir-safe": "^2.0.0",
 		"semver-compare": "^1.0.0",
@@ -159,7 +160,5 @@
 		"**/glob-parent": "^6.0.2",
 		"**/minimist": "^1.2.6"
 	},
-	"dependencies": {
-		"playwright": "^1.32.3"
-	}
+	"dependencies": {}
 }
