--- a/package.json
+++ b/package.json
@@ -160,5 +160,7 @@
 		"**/glob-parent": "^6.0.2",
 		"**/minimist": "^1.2.6"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"minimatch": "3.1.2"
+	}
 }
