--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
 		"docs:spell-check": "spech docs/*.md",
-		"build-ui-tests": "webpack -c ./ui-tests/webpack.config.js",
+		"build-ui-tests": "NODE_OPTIONS=--openssl-legacy-provider webpack -c ./ui-tests/webpack.config.js",
 		"run-ui-tests": "ts-node --project ./ui-tests/tsconfig.json ./ui-tests/index.ts",
 		"ui-tests": "yarn build-ui-tests && yarn run-ui-tests"
 	},
